syntax = "proto2";
package naothmessages;
option java_package= "de.naoth.rc.messages";

message AudioData
{
  required bytes samples = 1;
  required uint32 sampleSize = 2;
  
  required uint32 sampleRate = 3;
  required uint32 numChannels = 4;
}
